--- a/slim/app/templates/gene.html
+++ b/slim/app/templates/gene.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
-<form action="#" method="POST">
+<form action="" method="POST" role="form">
   <div class="form-group">
     <label for="gene_name">Gene name</label>
     <input id="gene_name" type="text" class="form-control" placeholder="{% if gene_name %} {{ gene_name }} {% else %}Gene name{% endif %}" />
