--- a/slim/app/templates/gene.html
+++ b/slim/app/templates/gene.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block body %}
-<form action="" method="POST" role="form">
+<form action="{{ url_for('by_gene') }}" method="POST" role="form" id="gene_search">
   <div class="form-group">
     <label for="gene_name">Gene name</label>
-    <input id="gene_name" type="text" class="form-control" placeholder="{% if gene_name %} {{ gene_name }} {% else %}Gene name{% endif %}" />
+    <input name="gene_name" type="text" class="form-control" placeholder="{% if gene_name %} {{ gene_name }} {% else %}Gene name{% endif %}" />
   </div>
   <button type="submit" class="btn btn-default">Search</button>
 </form>
