--- a/slim/app/templates/gene.html
+++ b/slim/app/templates/gene.html
@@ -9,7 +9,7 @@
 </form>
 
 {% if genes %}
-<table>
+<table class="table table-striped">
   <tr>
     {% for col in gene_cols %}
     <th>{{ col }}</th>
